# autoresearch-for-vision

./: .gitignore  CLAUDE.md  README.md  conftest.py  manage_iterations.py  program.md  pyproject.toml  pyrightconfig.json  run_training.py  train.py
agents/: cv-wiring-agent.md
agents/skills/cv-evaluation-guardrails/: SKILL.md
agents/skills/cv-task-wiring/: SKILL.md
agents/skills/cv-training-iteration/: SKILL.md
configs/: config.yaml  prompt_task.yaml
configs/agent/: default.yaml
configs/augmentations/: hflip.yaml  none.yaml
configs/data/: synthetic_prompt.yaml
configs/evaluation/: prompt_metrics.yaml
configs/examples/: README.md  prompt_task.yaml
configs/history/: default.yaml
configs/iteration/: default.yaml  smoke.yaml
configs/model/: tiny_cnn.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/scheduler/: cosine.yaml  step.yaml
configs/task/: prompt_task.yaml
configs/trainer/: cpu.yaml
cv-autoresearch/: README.md  conftest.py  pyproject.toml  pyrightconfig.json
cv-autoresearch/examples/: cifar10_classification.py
cv-autoresearch/examples/task_definitions/: 01_multiclass_classification.py  02_binary_classification.py  03_multilabel_classification.py  04_semantic_segmentation.py  05_object_detection.py  06_regression_depth_estimation.py  07_anomaly_detection.py  README.md  (+3 more)
cv-autoresearch/tests/: test_baseline.py  test_cli.py  test_config_schema.py  test_engine_integration.py  test_evaluator.py  test_history.py  test_lightning.py  test_logger.py  test_metric_generator.py  test_plotting.py  test_search_director.py  test_search_space.py  test_types.py  test_vlm_hooks.py
cv-error-analyzer/: README.md  setup.py  test_percentile_config.py  test_standalone.py  validate_core.py
cv-error-analyzer/config/: config.yaml
cv-error-analyzer/tests/: test_basic_analysis.py  test_integration.py  test_training_validator.py
docs/: custom_usage_guide.md
examples/: train_yolo_pose_autoresearch.py  train_yolo_pose_insighture.py
examples/task_definitions/: 01_multiclass_classification.py  README.md
skills/cv-metric-bridge/: SKILL.md
skills/cv-task-bridge/: SKILL.md
src/cv_autoresearch/: __init__.py  advisor.py  autoresearch.py  cli.py  metrics.py  task.py
tests/: test_augmentations.py  test_cli.py  test_engine_refactor.py  test_history.py  test_lightning.py  test_program_contract.py  test_search_space.py  test_types.py
(+71 files in other folders)
