[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-autoresearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "optuna>=3.0",
    "albumentations>=1.3",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "click>=8.0",
    "numpy>=1.24",
]

[project.scripts]
cv-autoresearch = "cv_autoresearch.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["cv-autoresearch/src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["cv-autoresearch/tests"]
addopts = "-v --cov=cv_autoresearch --cov-report=term-missing"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
