[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-autoresearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "hydra-core>=1.3",
    "matplotlib>=3.7",
    "omegaconf>=2.3",
    "pyrootutils>=1.0",
    "torchvision>=0.15",
    "click>=8.0",
    "numpy>=1.24",
]

[project.scripts]
cv-autoresearch = "cv_autoresearch.cli:main"
cv-autoresearch-train = "cv_autoresearch.engine.scripts.run_training:main"
cv-autoresearch-iterations = "cv_autoresearch.engine.scripts.manage_iterations:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=cv_autoresearch --cov-report=term-missing"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
